BS4 changes to fix pagination

--- a/tardis/tardis_portal/templates/tardis_portal/my_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/my_data.html
@@ -52,7 +52,7 @@
         Expand all</button>
       </div>
       <div class="clearfix"></div>
-      <div id="myowned" class="panel-group experiments"></div>
+      <div id="myowned" class="mydata panel-group experiments"></div>
       <br/>
       {% endif %}
     </div>  <!-- class="col-md-12" -->
