--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -176,7 +176,7 @@
                   Log In
                 </a>
             {% else %}
-              <a id="login-button" href="{% url 'tardis.tardis_portal.views.login' %}">
+              <a class="btn btn-outline-light" id="login-button" href="{% url 'tardis.tardis_portal.views.login' %}">
                 <i class="fa fa-sign-in"></i>
                 Log In
               </a>
