align image to same col

--- a/tardis/apps/openid_migration/templates/migrate_accounts.html
+++ b/tardis/apps/openid_migration/templates/migrate_accounts.html
@@ -70,6 +70,7 @@
         <div class="col-md-3" style="text-align: center">
             <h3>Legacy<br>Authentication</h3>
         </div>
+        <div class="col-md-2"></div>
         <div class="col-md-3 col-md-offset-2" style="text-align: center">
             <img id="aaf_img" alt="AAF"
                  src="{% static 'openid_migration/images/aaf-logo.png' %}"
