Changes to button styles to make them more consistent and to reduce the glare from over-use of btn-primary which is very bright in Bootstrap 4.
Avoid using btn-warning, because none of our button actions relate to warnings
and this style is more warning-like in Boostrap 4 - black text instead of white.

Use less btn-primary styles.  Use btn-primary mainly for Submit buttons.

Use btn-outline-secondary for most miscellaneous buttons.

Use nav-tabs instead of nav-pills (which looks like btn-primary).

Replace btn-xs with btn-sm. btn-xs doesn't exist in Boostrap 4.

Don't use btn-default which doesn't exist in Bootstrap 4.

Don't use an anchor inside a button element. Use one or the other.

--- a/tardis/tardis_portal/templates/registration/registration_form.html
+++ b/tardis/tardis_portal/templates/registration/registration_form.html
@@ -44,7 +44,7 @@
       {% csrf_token %}
       <div class="form-group">
         <div class="col-md-offset-2 col-md-3">
-          <button type="submit" class="btn btn-warning">
+          <button type="submit" class="btn btn-primary">
             <i class="fa fa-user"></i>
             Create New Account
           </button>
