--- a/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
@@ -34,11 +34,11 @@
     </label>
   </div>
   <br>
-    <button type="button" class="submit-button btn btn-success">
+    <button type="button" class="submit-button btn btn-primary">
       <i class="fa fa-ok"></i>
       Confirm
     </button>
-    <button type="button" class="cancel-button btn btn-default"
+    <button type="button" class="cancel-button btn btn-outline-secondary"
             data-dismiss="modal">
       <i class="fa fa-cancel"></i>
       Cancel
