--- a/tardis/tardis_portal/templates/tardis_portal/auth_methods.html
+++ b/tardis/tardis_portal/templates/tardis_portal/auth_methods.html
@@ -54,7 +54,7 @@
         {% endfor %}
       </fieldset>
       <div class="">
-        <button type="submit" id="link" class="btn btn-success">
+        <button type="submit" id="link" class="btn btn-primary">
           Link the Accounts
         </button>
       </div>
@@ -105,7 +105,7 @@
       </div>
       <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-          <button type="submit" id="edit" class="btn btn-warning" style="max-width: 200px;">
+          <button type="submit" id="edit" class="btn btn-outline-secondary" style="max-width: 200px;">
             <i class="fa fa-key"></i>
             Change Password
           </button>
