--- a/tardis/tardis_portal/templates/tardis_portal/manage_group_members.html
+++ b/tardis/tardis_portal/templates/tardis_portal/manage_group_members.html
@@ -64,7 +64,7 @@
 
 {% if perms.auth.add_group %}
 <div class="pull-right">
-<a style="margin-left: 10px;" class="create_group_link btn btn-warning" title="Create Group">
+<a style="margin-left: 10px;" class="create_group_link btn btn-primary" title="Create Group">
   <i class="fa fa-plus"></i>
   Create Group
 </a>
@@ -72,7 +72,7 @@
 {% endif %}
 {% if perms.auth.add_user %}
 <div class="pull-right">
-<a class="create_user_link btn btn-warning" title="Create User">
+<a class="create_user_link btn btn-primary" title="Create User">
   <i class="fa fa-plus"></i>
   Create User
 </a>
