--- a/tardis/tardis_portal/templates/tardis_portal/shared.html
+++ b/tardis/tardis_portal/templates/tardis_portal/shared.html
@@ -14,7 +14,7 @@
       <h2 class="visible-xs">Experiments</h2>
       <div class="pull-right">
         {% if perms.tardis_portal.add_experiment %}
-        <a class="btn btn-warning btn-sm"
+        <a class="btn btn-primary btn-sm"
            href="{% url 'tardis.tardis_portal.views.create_experiment' %}">
           <i class="fa fa-plus"></i>
           Create
