--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_description.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_description.html
@@ -106,7 +106,7 @@
       {% if organization|length > 1 %}
       {% for p in protocol %}
         {% for o in organization %}
-          <a class="btn btn-primary btn-xs" href="{{p.1}}{{o}}"
+          <a class="btn btn-outline-secondary btn-sm" href="{{p.1}}{{o}}"
              title="Download Entire Experiment as {{p.0|upper}} with {{o}} organization">
             <i class="fa fa-download"></i>
             {% if o == default_organization %}
@@ -119,7 +119,7 @@
       {% endfor %}
     {% else %}
       {% for p in protocol %}
-        <a class="btn btn-primary btn-sm" href="{{p.1}}"
+        <a class="btn btn-outline-secondary btn-sm" href="{{p.1}}"
            title="Download Entire Experiment as {{p.0|upper}}">
           <i class="fa fa-download"></i>
           {{p.0|upper}}
@@ -127,7 +127,7 @@
       {% endfor %}
     {% endif %}
     <a href="{% url "tardis.apps.sftp:index" %}?object_id={{ experiment.id }}&object_type=experiment"
-       target="_blank" class="btn btn-primary btn-sm" title="Download with SFTP">SFTP</a>
+       target="_blank" class="btn btn-outline-secondary btn-sm" title="Download with SFTP">SFTP</a>
     </dd>
   </dl>
   {% endif %}
