--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_metadata.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_metadata.html
@@ -17,7 +17,7 @@
   {% capture as edit_control %}
    {% if has_write_permissions and not parameterset.schema.immutable %}
    <div class="pull-right">
-       <a class="edit-metadata btn btn-default btn-sm btn-warning"
+       <a class="edit-metadata btn btn-sm btn-outline-secondary"
           href="{% url 'tardis.tardis_portal.views.edit_experiment_par' parameterset.id %}">
           <i class="fa fa-pencil"></i>
           Edit
