--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameters.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameters.html
@@ -35,7 +35,7 @@
       <div class="pull-right">
         <a href="{% url 'tardis.tardis_portal.views.edit_datafile_par' parameterset.id %}"
            data-toggle_selector="#datafile_metadata_toggle_{{parameterset.datafile_id}}"
-           class="edit-metadata btn btn-default btn-xs btn-warning">
+           class="edit-metadata btn btn-sm btn-outline-secondary">
           <i class="fa fa-pencil"></i>
           Edit
         </a>
