--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -21,17 +21,16 @@
               <i class="fa fa-ok"></i> Save
             </button>
             {% if experiment_id %}
-            <button type="button" class="btn btn-default">
-              <a href="{% url 'tardis_portal.view_experiment' experiment_id %}">
-                 Cancel
+            <a class="btn btn-outline-secondary"
+               href="{% url 'tardis_portal.view_experiment' experiment_id %}">
+              Cancel
             </a>
             </button>
             {% else %}
-            <button type="button" class="btn btn-default">
-               <a href="{% url 'tardis.tardis_portal.views.my_data' %}">
-               Cancel
-               </a>
-            </button>
+              <a class="btn btn-outline-secondary"
+                 href="{% url 'tardis.tardis_portal.views.my_data' %}">
+                Cancel
+             </a>
             {% endif %}
           </div>
         </div>
