--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -49,7 +49,7 @@
   {% if not experiment.public %}
   <div class="float-right">
     {% if push_to_enabled and is_authenticated %}
-    <a class="btn btn-sm btn-primary" title="Push to..."
+    <a class="btn btn-sm btn-outline-secondary" title="Push to..."
        onclick="window.open('{{ push_to_url }}', 'push-to', 'width=800, height=600'); return false;"
        href="{{ push_to_url }}" target="_blank">
       <i class="fa fa-upload"></i>
@@ -57,7 +57,7 @@
     </a>
     {% endif %}
     {% if has_write_permissions %}
-    <a class="btn btn-sm btn-warning" title="Edit Experiment"
+    <a class="btn btn-sm btn-outline-secondary" title="Edit Experiment"
        href="{{ experiment.get_edit_url }}">
       <i class="fa fa-pencil"></i>
       Edit Experiment
@@ -100,7 +100,7 @@
     </div>
   </div>
     <!-- Tab buttons -->
-    <ul id="experiment-tabs" class="nav nav-pills" style="padding-top: 1.25rem">
+    <ul id="experiment-tabs" class="nav nav-tabs" style="padding-top: 1.25rem">
       {% for appurl, appname in apps %}
       <li class="nav-item"><a class="nav-link" data-toggle="tab" title="{{appname}}" data-url="{{ appurl }}">{{ appname }}</a></li>
       {% endfor %}
