--- a/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
@@ -1,14 +1,14 @@
 <div class="group_create">
   <form role="form">
     <div class="form-group">
-      <label class="control-label" for="id_addgroup">Name:</label>
+      <label class="col-form-label" for="id_addgroup">Name:</label>
       <input type="text" name="addgroup" id="id_addgroup" required
              class="form-control groupsuggest" maxlength="100"
              style="max-width: 260px;">
     </div>
 
     <div class="form-group">
-      <label class="control-label" for="id_groupadmin">
+      <label class="col-form-label" for="id_groupadmin">
           Group admin (enter username exactly - you will automatically be added as an admin):
       </label>
       <input type="text" name="groupadmin" id="id_groupadmin"
