--- a/tardis/apps/openid_migration/templates/migrate_accounts.html
+++ b/tardis/apps/openid_migration/templates/migrate_accounts.html
@@ -1,6 +1,6 @@
 {% extends "tardis_portal/portal_template.html" %}
-{% load bootstrap %}
 {% load static from staticfiles %}
+{% load widget_tweaks %}
 
 {% block script %}
 
@@ -39,9 +39,20 @@
         <div class="col-md-4 login-box col">
             <form class="form-horizontal" style="padding-top: 20px ; ">
                 {% csrf_token %}
-                {{ authForm|bootstrap_horizontal:'col-md-2' }}
-                <div class="form-group">
-                  <div class="col-md-10 col-md-offset-2">
+                <div class="form-group row">
+                  <label class="col-form-label col-md-2" for="id_username">Username</label>
+                  <div class="col-md-10 ">
+                    {{ authForm.username | add_class:"form-control" }}
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-form-label col-md-2" for="id_password">Password</label>
+                  <div class="col-md-10 ">
+                    {{ authForm.password | add_class:"form-control" }}
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="offset-md-2 col-md-10">
                     <button type="submit" id="verify-my-account" class="btn btn-info btn-sm">
                         <i class="fa fa-sign-in"></i> Verify my Account
                     </button>
