--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group.html
@@ -15,14 +15,14 @@
 </div>
 <form>
   <div class="form-group">
-    <label class="control-label" for="id_group">Add group to experiment:</label>
+    <label class="col-form-label" for="id_group">Add group to experiment:</label>
     <input type="text" name="group" autocomplete="group"
            class="form-control groupsuggest" id="id_group" required
            placeholder="group" style="max-width: 200px;">
   </div>
 
   <div class="form-group">
-    <label class="control-label" for="id_permissions">Permissions</label>
+    <label class="col-form-label" for="id_permissions">Permissions</label>
     <select id="id_permission_group" class="form-control" style="max-width: 200px;">
       <option value="read">View Only</option>
       <option value="edit">View and Edit</option>
@@ -31,7 +31,7 @@
   </div>
 
   <div class="form-group">
-    <p class="control-label"><em>Owner Groups have the ability to change access controls and share experiments with others.</em></p>
+    <p class="col-form-label"><em>Owner Groups have the ability to change access controls and share experiments with others.</em></p>
   </div>
 
   <button type="button" class="form_submit btn btn-primary" id="group" href="">
