--- a/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
@@ -1,6 +1,7 @@
 {% load static from staticfiles %}
 {% block content %}
 {% load render_bundle from webpack_loader %}
+{% load widget_tweaks %}
 <!-- Scripts -->
 {% load jstemplate %}
 {% mustachejs "tardis_portal/license_selector" %}
@@ -15,8 +16,15 @@
 <br/>
 <form action="{% url 'tardis.tardis_portal.views.choose_rights' experiment.id %}"
       method="post" class="experiment-rights form-horizontal">{% csrf_token %}
-  {% load bootstrap %}
-  {{ form|bootstrap_horizontal:'col-md-3' }}
+
+  {{ form.license }} {# hidden input #}
+  {{ form.legal_text }} {# hidden input #}
+  <div class="form-group">
+    <label class="col-form-label col-md-3 " for="id_public_access">Public access</label>
+    <div class="col-md-9 ">
+      {{ form.public_access | add_class:"form-control" }}
+    </div>
+  </div>
 
 <h3>Step 2: Select a license:</h3>
   <div id="license-options"></div>
