--- a/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
@@ -6,7 +6,7 @@
 <form class="add-user-form form-horizontal">
   <legend>Add User</legend>
   <div class="form-group">
-    <label class="control-label col-md-2 " for="id_adduser">User</label>
+    <label class="col-form-label col-md-2 " for="id_adduser">User</label>
       <div class="col-md-4" style="max-width: 250px;">
         <input type="text" name="adduser" id="id_adduser"
                class="usersuggest form-control"
@@ -15,7 +15,7 @@
   </div>
 
   <div class="form-group">
-    <div class=" col-md-offset-2 col-md-4">
+    <div class=" offset-md-2 col-md-4">
       <div class="checkbox">
         <label>
           <input type="checkbox" name="admin" class="isAdmin" id="id_admin"> <span>Group Admin</span>
@@ -25,7 +25,7 @@
   </div>
 
   <div class="form-group">
-    <div class="col-md-offset-2 col-md-4">
+    <div class="offset-md-2 col-md-4">
       <input type="hidden" name="group_id" class="group_id" value="{{group_id}}">
       <button type="submit" class="btn btn-primary">
         <i class="fa fa-plus"></i>
