--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -1,41 +1,70 @@
 {% extends "tardis_portal/portal_template.html" %}
 {% load render_bundle from webpack_loader %}
+{% load widget_tweaks %}
 
 {% block content %}
+<div id="content" class="container">
   <div class="page-header">
     <h1 class="title">{{ subtitle }}</h1>
   </div>
-  {{ form.non_field_errors }}
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       <form id="create_experiment_form" action="" method="POST"
-            class="form-horizontal">{% csrf_token %}
-        {% load bootstrap %}
-        {{ form.title|bootstrap_horizontal:'col-md-3' }}
-        {{ form.authors|bootstrap_horizontal:'col-md-3' }}
-        {{ form.institution_name|bootstrap_horizontal:'col-md-3' }}
-        {{ form.description|bootstrap_horizontal:'col-md-3' }}
-        <div class="form-group">
-          <div class="col-md-offset-3 col-md-4">
-            <button type="submit" class="btn btn-primary">
-              <i class="fa fa-ok"></i> Save
-            </button>
+            class="form-horizontal">
+        {% csrf_token %}
+        <div class="form-group row">
+          <label class="col-form-label col-md-2 " for="title">Title</label>
+          <div class=" col-md-9 ">
+            {{ form.title | add_class:"form-control" }}
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-form-label col-md-2 " for="authors">Authors</label>
+          <div class=" col-md-9 ">
+            {{ form.authors | add_class:"form-control" }}
+            <p class="help-block mb-0">
+                Comma-separated authors and optional emails/URLs
+            </p>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-form-label col-md-2 " for="institution_name">Institution name</label>
+          <div class=" col-md-9 ">
+           {{ form.institution_name | add_class:"form-control" }}
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-form-label col-md-2 " for="description">Description</label>
+          <div class=" col-md-9 ">
+            {{ form.description | add_class:"form-control" }}
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="offset-md-2 col-md-9 text-right">
             {% if experiment_id %}
-            <a class="btn btn-outline-secondary"
-               href="{% url 'tardis_portal.view_experiment' experiment_id %}">
-              Cancel
+            <button type="button" class="btn btn-outline-secondary btn-sm">
+              <a href="{% url 'tardis_portal.view_experiment' experiment_id %}">
+                 <i class="fa fa-close"></i>
+                 Cancel
             </a>
             </button>
             {% else %}
-              <a class="btn btn-outline-secondary"
-                 href="{% url 'tardis.tardis_portal.views.my_data' %}">
-                Cancel
-             </a>
+            <button type="button" class="btn btn-outline-secondary btn-sm">
+               <a href="{% url 'tardis.tardis_portal.views.my_data' %}">
+                 <i class="fa fa-close"></i>
+                 Cancel
+               </a>
+            </button>
             {% endif %}
+            <button type="submit" class="btn btn-primary btn-sm mr-0">
+              <i class="fa fa-check"></i>
+              Save
+            </button>
           </div>
         </div>
       </form>
     </div>
   </div>
   {% render_bundle 'tardis_portal_create_experiment' %}
+</div>
 {% endblock %}
