--- a/tardis/tardis_portal/templates/tardis_portal/manage_group_members.html
+++ b/tardis/tardis_portal/templates/tardis_portal/manage_group_members.html
@@ -17,11 +17,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="title">Create Group</h1>
-        <a class="close" data-dismiss="modal">&times;</a>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
       <div class="alert alert-danger alert-dismissible" style="display:none">
-        <a class="close" onclick="$('.alert').hide()">×</a>
+        <button type="button" class="close" onclick="$('.alert').hide()">×</button>
         <div id="error-message"></div>
       </div>
 
@@ -40,7 +40,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="title">Create User</h1>
-        <a class="close" data-dismiss="modal">&times;</a>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -53,7 +53,7 @@
 </div>
 
 <div class="alert alert-success alert-dismissible" style="display:none">
-  <a class="close" data-dismiss="alert">×</a>
+  <button type="button" class="close" data-dismiss="alert">×</button>
   <strong>Success!</strong>
   <div id="success-message"></div>
 </div>
@@ -64,18 +64,18 @@
 
 {% if perms.auth.add_group %}
 <div class="pull-right">
-<a style="margin-left: 10px;" class="create_group_link btn btn-primary" title="Create Group">
-  <i class="fa fa-plus"></i>
-  Create Group
-</a>
+  <button style="margin-left: 10px;" class="create_group_link btn btn-primary" title="Create Group">
+    <i class="fa fa-plus"></i>
+    Create Group
+  </button>
 </div>
 {% endif %}
 {% if perms.auth.add_user %}
 <div class="pull-right">
-<a class="create_user_link btn btn-primary" title="Create User">
-  <i class="fa fa-plus"></i>
-  Create User
-</a>
+  <button class="create_user_link btn btn-primary" title="Create User">
+    <i class="fa fa-plus"></i>
+    Create User
+  </button>
 </div>
 {% endif %}
 
