--- a/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
@@ -37,21 +37,16 @@
         </div>
         <div class="form-group row">
           <div class="offset-md-2 col-md-9 text-right">
-            {% if dataset %}
-              <button type="button" class="btn btn-outline-secondary btn-sm">
-                <a href="{% url 'tardis_portal.view_dataset' dataset.id %}">
-                   <i class="fa fa-close"></i>
-                   Cancel
-              </a>
-              </button>
-            {% else %}
-              <button type="button" class="btn btn-outline-secondary btn-sm">
-                 <a href="{% url 'tardis.tardis_portal.views.my_data' %}">
-                   <i class="fa fa-close"></i>
-                   Cancel
-                 </a>
-              </button>
-            {% endif %}
+            <a class="btn btn-outline-secondary btn-sm"
+              {% if dataset %}
+                href="{% url 'tardis_portal.view_dataset' dataset.id %}"
+              {% else %}
+                href="{% url 'tardis.tardis_portal.views.my_data' %}"
+              {% endif %}
+            >
+              <i class="fa fa-close"></i>
+              Cancel
+            </a>
             <button type="submit" class="btn btn-primary btn-sm mr-0">
               <i class="fa fa-check"></i>
               Save
