--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -41,21 +41,16 @@
         </div>
         <div class="form-group row">
           <div class="offset-md-2 col-md-9 text-right">
-            {% if experiment_id %}
-            <button type="button" class="btn btn-outline-secondary btn-sm">
-              <a href="{% url 'tardis_portal.view_experiment' experiment_id %}">
-                 <i class="fa fa-close"></i>
-                 Cancel
+            <a class="btn btn-outline-secondary btn-sm"
+              {% if experiment_id %}
+                href="{% url 'tardis_portal.view_experiment' experiment_id %}"
+              {% else %}
+                href="{% url 'tardis.tardis_portal.views.my_data' %}"
+              {% endif %}
+            >
+              <i class="fa fa-close"></i>
+              Cancel
             </a>
-            </button>
-            {% else %}
-            <button type="button" class="btn btn-outline-secondary btn-sm">
-               <a href="{% url 'tardis.tardis_portal.views.my_data' %}">
-                 <i class="fa fa-close"></i>
-                 Cancel
-               </a>
-            </button>
-            {% endif %}
             <button type="submit" class="btn btn-primary btn-sm mr-0">
               <i class="fa fa-check"></i>
               Save
