Make buttons, icons and forms look a bit more consistent

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
@@ -28,7 +28,7 @@
     <div class="col-md-4">
       <a class="remove_group btn btn-sm btn-danger"
          href="{% url 'tardis.tardis_portal.views.remove_experiment_access_group' experiment_id group.id %}">
-        <i class="fa fa-trash"></i>
+        Delete
       </a>
     </div>
     {% endif %}
