--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_result.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_result.html
@@ -17,7 +17,7 @@
   <div class="col-md-3">
     <a title="Remove Access" class="remove_user btn btn-danger btn-sm"
       href="{% url 'tardis.tardis_portal.views.remove_experiment_access_user' experiment_id user.username %}">
-      <i class="fa fa-trash"></i>
+      Delete
     </a>
   </div>
 </div> <!-- access_list_user -->
