--- a/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
@@ -16,9 +16,16 @@
              style="max-width: 260px;">
     </div>
 
-    <button type="submit" class="form_submit btn btn-primary" id="group">
-      <i class="fa fa-plus"></i>
-      Create Group
-    </button>
+    <div class="form-group text-right">
+      <button type="button" class="cancel-button btn btn-outline-secondary"
+              data-dismiss="modal">
+        <i class="fa fa-close"></i>
+        Cancel
+      </button>
+      <button type="submit" class="form_submit btn btn-primary" id="group">
+        <i class="fa fa-plus"></i>
+        Create Group
+      </button>
+    </div>
   </form>
 </div>
