--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameteradd.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameteradd.html
@@ -44,12 +44,12 @@
 
     <div class="form-group">
       <footer class="col-md-12 text-right">
-        <button type="button" class="cancel-button btn btn-sm btn-outline-secondary"
+        <button type="button" class="cancel-button btn btn-outline-secondary"
                 data-dismiss="modal">
           <i class="fa fa-close"></i>
           Cancel
         </button>
-        <button type="submit" class="submit-button btn btn-sm btn-primary">
+        <button type="submit" class="submit-button btn btn-primary">
           <i class="fa fa-check"></i>
           Save
         </button>
