--- a/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
@@ -37,7 +37,7 @@
         </div>
         <div class="form-group row">
           <div class="offset-md-2 col-md-9 text-right">
-            <a class="btn btn-outline-secondary btn-sm"
+            <a class="btn btn-outline-secondary"
               {% if dataset %}
                 href="{% url 'tardis_portal.view_dataset' dataset.id %}"
               {% else %}
@@ -47,7 +47,7 @@
               <i class="fa fa-close"></i>
               Cancel
             </a>
-            <button type="submit" class="btn btn-primary btn-sm mr-0">
+            <button type="submit" class="btn btn-primary mr-0">
               <i class="fa fa-check"></i>
               Save
             </button>
