--- a/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
@@ -26,30 +26,32 @@
     </div>
   </div>
 
-<h3>Step 2: Select a license:</h3>
+  <h3>Step 2: Select a license:</h3>
   <div id="license-options"></div>
-<div id="selected-license-text"></div>
-<div id="legal-section">
-  <button class="btn-secondary" id="reselect-license">Reselect License</button>
-  <br/><br/>
-<h3 >Step 3: Accept The Legal Agreement:</h3>
-  <pre id="publishing-legal-text"
-       style="white-space: pre-wrap; word-break: keep-all;">{{ form.legal_text.value }}</pre>
-  <div class="checkbox">
-    <label>
-      <input id="publishing-consent" type="checkbox" value="Agree" />
-      I agree to the above terms
-    </label>
+  <div id="selected-license-text"></div>
+  <div id="legal-section">
+    <button class="btn-secondary" id="reselect-license">Reselect License</button>
+    <br/><br/>
+    <h3 >Step 3: Accept The Legal Agreement:</h3>
+    <pre id="publishing-legal-text"
+         style="white-space: pre-wrap; word-break: keep-all;">{{ form.legal_text.value }}</pre>
+    <div class="checkbox">
+      <label>
+        <input id="publishing-consent" type="checkbox" value="Agree" />
+        I agree to the above terms
+      </label>
+    </div>
   </div>
   <br>
-    <button type="button" class="submit-button btn btn-primary">
-      <i class="fa fa-ok"></i>
-      Confirm
-    </button>
+  <div class="form-group text-right">
     <button type="button" class="cancel-button btn btn-outline-secondary"
             data-dismiss="modal">
-      <i class="fa fa-cancel"></i>
+      <i class="fa fa-close"></i>
       Cancel
+    </button>
+    <button type="button" class="submit-button btn btn-primary">
+      <i class="fa fa-check"></i>
+      Confirm
     </button>
   </div>
 </form>
