--- a/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
@@ -1,11 +1,11 @@
-<div class="users">
+<div class="users w-75">
 {% for user in users %}
   {% include "tardis_portal/ajax/add_user_to_group_result.html" %}
 {% endfor %}
 </div> <!-- users -->
 <form class="add-user-form form-horizontal">
   <legend>Add User</legend>
-  <div class="form-group">
+  <div class="form-group row">
     <label class="col-form-label col-md-2 " for="id_adduser">User</label>
       <div class="col-md-4" style="max-width: 250px;">
         <input type="text" name="adduser" id="id_adduser"
@@ -14,7 +14,7 @@
       </div>
   </div>
 
-  <div class="form-group">
+  <div class="form-group row">
     <div class=" offset-md-2 col-md-4">
       <div class="checkbox">
         <label>
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="form-group">
+  <div class="form-group row">
     <div class="offset-md-2 col-md-4">
       <input type="hidden" name="group_id" class="group_id" value="{{group_id}}">
       <button type="submit" class="btn btn-primary">
