--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -41,7 +41,7 @@
         </div>
         <div class="form-group row">
           <div class="offset-md-2 col-md-9 text-right">
-            <a class="btn btn-outline-secondary btn-sm"
+            <a class="btn btn-outline-secondary"
               {% if experiment_id %}
                 href="{% url 'tardis_portal.view_experiment' experiment_id %}"
               {% else %}
@@ -51,7 +51,7 @@
               <i class="fa fa-close"></i>
               Cancel
             </a>
-            <button type="submit" class="btn btn-primary btn-sm mr-0">
+            <button type="submit" class="btn btn-primary mr-0">
               <i class="fa fa-check"></i>
               Save
             </button>
