--- a/tardis/tardis_portal/templates/tardis_portal/ajax/create_user.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/create_user.html
@@ -5,7 +5,7 @@
         <div class="form-group">
           <label class="col-form-label-sm py-0" for="{{field.name}}">{{field.label}}</label>
           <div class="col-md-9 pl-0">
-            {{ field | add_class:"form-control form-control-sm" }}
+            {{ field | add_class:"form-control" }}
           </div>
         </div>
       {% endfor %}
