--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_to_group_result.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_to_group_result.html
@@ -13,7 +13,7 @@
   <div class="col-md-2">
     <a title="Remove Access" class="remove_user btn btn-danger btn-sm"
        href="{% url 'tardis.tardis_portal.views.remove_user_from_group' group_id user.username %}">
-      <i class="fa fa-remove"></i>
+      <i class="fa fa-trash"></i>
       Delete
     </a>
   </div>
