table-condensed was replaced with table-sm in Bootstrap 4

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_tokens.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_tokens.html
@@ -12,7 +12,7 @@
 </script>
 
 <div class="access_list3">
-<div class="tokens table table-condensed">
+<div class="tokens table table-sm">
   <div class="access_list_tokens">
     {% if not tokens %}
       <p>No tokens defined </p>
