--- a/tardis/tardis_portal/templates/tardis_portal/ajax/group_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/group_list.html
@@ -2,6 +2,7 @@
 <div class="group">
   <h2>
     <a href="{% url 'tardis.tardis_portal.views.retrieve_group_userlist' group.id %}"
+       data-group_id="{{group.id}}"
        class="members-hidden member_list_user_toggle small">
       <i class="fa fa-folder"></i>
       {{ group.name }}
