--- a/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
@@ -3,14 +3,15 @@
   {% include "tardis_portal/ajax/add_user_to_group_result.html" %}
 {% endfor %}
 </div> <!-- users -->
-<form class="add-user-form form-horizontal">
+<form class="add-user-form form-horizontal" novalidate>
   <legend>Add User</legend>
   <div class="form-group row">
     <label class="col-form-label col-md-2 " for="id_adduser">User</label>
       <div class="col-md-4" style="max-width: 250px;">
-        <input type="text" name="adduser" id="id_adduser"
+        <input type="text" name="adduser" id="id_adduser-{{group_id}}" required
                class="usersuggest form-control"
                maxlength="100" autocomplete="off">
+        <div id="id_adduser-{{group_id}}-validation"></div>
       </div>
   </div>
 
@@ -18,7 +19,7 @@
     <div class=" offset-md-2 col-md-4">
       <div class="checkbox">
         <label>
-          <input type="checkbox" name="admin" class="isAdmin" id="id_admin"> <span>Group Admin</span>
+            <input type="checkbox" name="admin" class="isAdmin" id="id_admin-{{group_id}}"> <span>Group Admin</span>
         </label>
       </div>
     </div>
